updated the demo.html

--- a/mardi gras project/demo.html
+++ b/mardi gras project/demo.html
@@ -26,6 +26,10 @@
 
 <body>
     <img src="css/images/parking.jpg" alt="parking" class="frame">
+    <div>dd</div>
+    <div>dd</div>
+    <div>d`</div>
+    <div>dfsad</div>
 </body>
 
 </html>
