updating media page and small fixes

--- a/mardi gras project/faq.html
+++ b/mardi gras project/faq.html
@@ -30,14 +30,11 @@
             </button>
             <div class="collapse navbar-collapse" id="stavit1">
                 <img src="css/images/logoMardi.png" alt="mardi logo" class="logo">
-                <button class="btn nav-item nav-link active home col"
-                    onclick="document.location = 'index.html'">Home</button>
-                <button class="btn nav-item nav-link about col"
-                    onclick="document.location = 'about.html'">About</button>
-                <button class="btn nav-item nav-link media col"
-                    onclick="document.location = 'media.html'">Media</button>
-                <button class="btn nav-item nav-link faq col" onclick="document.location = 'faq.html'">FAQ</button>
-                <button class="btn nav-item nav-link contact col" onclick="document.location = 'contact.html'">Contact
+                <button class="btn nav-item active home col" onclick="document.location = 'index.html'">Home</button>
+                <button class="btn nav-item about col" onclick="document.location = 'about.html'">About</button>
+                <button class="btn nav-item media col" onclick="document.location = 'media.html'">Media</button>
+                <button class="btn nav-item faq col" onclick="document.location = 'faq.html'">FAQ</button>
+                <button class="btn nav-item contact col" onclick="document.location = 'contact.html'">Contact
                     Us</button>
             </div>
         </nav>
