--- a/mardi gras project/about.html
+++ b/mardi gras project/about.html
@@ -30,14 +30,11 @@
             </button>
             <div class="collapse navbar-collapse" id="stavit1">
                 <img src="css/images/logoMardi.png" alt="mardi logo" class="logo">
-                <button class="btn nav-item nav-link active home col"
-                    onclick="document.location = 'index.html'">Home</button>
-                <button class="btn nav-item nav-link about col"
-                    onclick="document.location = 'about.html'">About</button>
-                <button class="btn nav-item nav-link media col"
-                    onclick="document.location = 'media.html'">Media</button>
-                <button class="btn nav-item nav-link faq col" onclick="document.location = 'faq.html'">FAQ</button>
-                <button class="btn nav-item nav-link contact col" onclick="document.location = 'contact.html'">Contact
+                <button class="btn nav-item active home col" onclick="document.location = 'index.html'">Home</button>
+                <button class="btn nav-item about col" onclick="document.location = 'about.html'">About</button>
+                <button class="btn nav-item media col" onclick="document.location = 'media.html'">Media</button>
+                <button class="btn nav-item faq col" onclick="document.location = 'faq.html'">FAQ</button>
+                <button class="btn nav-item contact col" onclick="document.location = 'contact.html'">Contact
                     Us</button>
             </div>
         </nav> <br>
@@ -66,7 +63,7 @@
             with the "Meeting of the Courts" between Rex and Comus.</p>
         <br>
         <div class="w-50">
-            <img alt="LaToya Cantrell.jpg" class="img img-fluid mayor float-left mr-2 wow flip"
+            <img alt="LaToya Cantrell.jpg" class="img img-fluid mayor float-left w-50"
                 src="https://upload.wikimedia.org/wikipedia/commons/8/8d/LaToya_Cantrell.jpg">
             <h3>LaToya Cantrell</h3>
             <p class="info">born April 3, 1972 is an American politician serving as the Mayor of New Orleans, Louisiana,
