updating contact page and small fixes

--- a/mardi gras project/about.html
+++ b/mardi gras project/about.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="css/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="css/images/favicon-16x16.png">
+    <link rel="manifest" href="css/images/site.webmanifest">
     <title>Mardi Gras 2020</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -62,20 +66,25 @@
             Avenue and Canal Street, on the upriver side of the French Quarter. Mardi Gras day traditionally concludes
             with the "Meeting of the Courts" between Rex and Comus.</p>
         <br>
-        <div class="w-50">
-            <img alt="LaToya Cantrell.jpg" class="img img-fluid mayor float-left w-50"
-                src="https://upload.wikimedia.org/wikipedia/commons/8/8d/LaToya_Cantrell.jpg">
-            <h3>LaToya Cantrell</h3>
-            <p class="info">born April 3, 1972 is an American politician serving as the Mayor of New Orleans, Louisiana,
-                a post she
-                has held since May 7, 2018. As the first black woman to hold the post and a Democrat, Cantrell
-                represented District B on the New Orleans City Council from 2012–2018</p>
+        <div class="idm">
+            <div class="mayor">
+                <img alt="LaToya Cantrell.jpg" class="float-left idm mayor wow zoomIn"
+                    src="https://upload.wikimedia.org/wikipedia/commons/8/8d/LaToya_Cantrell.jpg">
+            </div>
+            <div class="info">
+                <h3>LaToya Cantrell</h3>
+                <p class="info">born April 3, 1972 is an American politician serving as the Mayor of New Orleans,
+                    Louisiana,
+                    a post she
+                    has held since May 7, 2018. As the first black woman to hold the post and a Democrat, Cantrell
+                    represented District B on the New Orleans City Council from 2012–2018</p>
+            </div>
         </div>
-        <br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer>
             <p class="copy img-fluid">&copy; Made By: Stav Tamam</p>
         </footer>
-        <br>
+        <br><br>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
