--- a/mardi gras project/faq.html
+++ b/mardi gras project/faq.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="css/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="css/images/favicon-16x16.png">
+    <link rel="manifest" href="css/images/site.webmanifest">
     <title>Mardi Gras 2020</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -40,7 +44,7 @@
         </nav>
         <h1>FAQ</h1>
         <div>
-            <img src="css/images/faq.jpg" alt="mardi Gras" class="faqimg img-fluid">
+            <img src="css/images/faq.jpg" alt="mardi Gras" class="img-fluid w-100 d-inline-block imgim">
         </div><br>
         <div class="qaa">
             <div class="panel-group" id="faqAccordion">
@@ -52,11 +56,11 @@
                         </h4>
 
                     </div>
-                    <div id="question0" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
-
-                            <p>Mardi Gras (/ˈmɑːrdi ˌɡrɑː/), or Fat Tuesday, refers to events of the Carnival
+                    <div id="question0" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
+                            <p>Mardi Gras (/ˈmɑːrdi ˌɡrɑː/), or Fat Tuesday, refers to events of the
+                                Carnival
                                 celebration, beginning on or after the Christian feasts of the Epiphany (Three Kings
                                 Day) and culminating on the day before Ash Wednesday, which is known as Shrove Tuesday.
                                 Mardi Gras is French for "Fat Tuesday", reflecting the practice of the last night of
@@ -69,7 +73,9 @@
                                 from the word shrive, meaning "to administer the sacrament of confession to; to
                                 absolve".
                             </p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInLeft">
@@ -80,11 +86,12 @@
                         </h4>
 
                     </div>
-                    <div id="question1" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question1" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>The holiday of Mardi Gras is celebrated in all of Louisiana, including the city of New
+                            <p>The holiday of Mardi Gras is celebrated in all of Louisiana, including the
+                                city of New
                                 Orleans. Celebrations are concentrated for about two weeks before and through Shrove
                                 Tuesday, the day before Ash Wednesday (the start of lent in the Western Christian
                                 tradition). Usually there is one major parade each day (weather permitting); many days
@@ -92,7 +99,9 @@
                                 five days of the Mardi Gras season. In the final week, many events occur throughout New
                                 Orleans and surrounding communities, including parades and balls (some of them
                                 masquerade balls).</p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInRight">
@@ -103,11 +112,12 @@
                         </h4>
 
                     </div>
-                    <div id="question2" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question2" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>The colors traditionally associated with Mardi Gras in New Orleans are green, gold, and
+                            <p>The colors traditionally associated with Mardi Gras in New Orleans are
+                                green, gold, and
                                 purple. The colors were first specified in proclamations by the Rex organization during
                                 the lead-up to their inaugural parade in 1872, suggesting that balconies be draped in
                                 banners of these colors. It is unknown why these specific colors were chosen; some
@@ -128,7 +138,9 @@
                                 declared that the three colors symbolized justice, power, and faith. The traditional
                                 colors are commonly addressed as purple, green, and gold, in that order—even though this
                                 order violates the rule of tincture.</p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInRight">
@@ -139,14 +151,17 @@
                         </h4>
 
                     </div>
-                    <div id="question3" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question3" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>There is no need for tickets to see a parade...all of them are FREE!! That is why it is
+                            <p>There is no need for tickets to see a parade...all of them are FREE!! That
+                                is why it is
                                 called "The Greatest Free Show on Earth!". You only get tickets if you want to sit down
                                 on stands as the parades pass. </p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInLeft">
@@ -157,15 +172,18 @@
                         </h4>
 
                     </div>
-                    <div id="question4" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question4" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>The method of selecting a king varies from krewe to krewe. Some krewes hold random
+                            <p>The method of selecting a king varies from krewe to krewe. Some krewes hold
+                                random
                                 drawings, while others invite a celebrity guest to be their king. Rex, the King of
                                 Carnival, is chosen by the School of Design, who sponsors the Rex parade. His identity
                                 is revealed the day before the parade. </p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInLeft">
@@ -176,13 +194,16 @@
                         </h4>
 
                     </div>
-                    <div id="question5" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
+                    <div id="question5" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
                             <h5><span class="label label-primary">Answer</span></h5>
 
-                            <p>Economic impact reports indicate that Mardi Gras generates over $1 billion in annual
+                            <p>Economic impact reports indicate that Mardi Gras generates over $1 billion
+                                in annual
                                 spending.</p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInRight">
@@ -193,11 +214,12 @@
                         </h4>
 
                     </div>
-                    <div id="question6" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question6" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>Mardi Gras parade krewes are private, non-profit organizations whose members get together
+                            <p>Mardi Gras parade krewes are private, non-profit organizations whose members
+                                get together
                                 year round to plan their parade's theme, costumes and unique throws. Each Carnival Club,
                                 as they are known, is individually funded by its members. They support their krewe
                                 through dues, sales of krewe-related merchandise to their members, and fundraising.
@@ -206,7 +228,9 @@
                                 The city of New Orleans is not involved in coordinating Mardi Gras parades; their only
                                 involvement is to issue parade permits to each individual Mardi Gras krewe that
                                 schedules and coordinates its own parade.</p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInRight">
@@ -217,14 +241,17 @@
                         </h4>
 
                     </div>
-                    <div id="question7" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question7" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>City governments are not involved in coordinating Mardi Gras parades. The governments
+                            <p>City governments are not involved in coordinating Mardi Gras parades. The
+                                governments
                                 issue parade permits, but that is the extent of their involvement. Krewes independently
                                 schedule and coordinate their own parades.</p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInLeft">
@@ -235,11 +262,12 @@
                         </h4>
 
                     </div>
-                    <div id="question8" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question8" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>MardiGrasNewOrleans.com, of course. We organized and presented the first live Mardi Gras
+                            <p>MardiGrasNewOrleans.com, of course. We organized and presented the first
+                                live Mardi Gras
                                 in 1995 and continued sharing this with our visitors for several years with companies
                                 like Microsoft and REAL Media. The live events showcased on MardiGrasNewOrleans.com have
                                 been covered by the New York Times, Chicago Tribune, TImes PIcayune, Morning Advocate,
@@ -248,7 +276,9 @@
                                 The first year, we presented the Orpheuscapade, and soon offered live chats with
                                 celebrities, interviews with costumed revelers on the streets, and video from atop
                                 hotels in the Garden District.</p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
                 <div class="panel panel-default wow fadeInLeft">
@@ -259,13 +289,16 @@
                         </h4>
 
                     </div>
-                    <div id="question9" class="panel-collapse collapse" style="height: 0px;">
-                        <div class="panel-body">
-                            <h5><span class="label label-primary">Answer</span></h5>
+                    <div id="question9" class="panel-collapse collapse" style="height: 0px;"><br>
+                        <div class="panel-body ing2">
+                            <h5><span class="label">Answer</span></h5>
 
-                            <p>The tradition of float riders throwing trinkets to the crowds began in the 1870s, and
+                            <p>The tradition of float riders throwing trinkets to the crowds began in the
+                                1870s, and
                                 continues today. Typical throws include beads, cups, doubloons and stuffed animals. </p>
-                        </div>
+                            <img src="css/images/last.png" alt="icon"><img src="css/images/last.png" alt="icon"><img
+                                src="css/images/last.png" alt="icon">
+                        </div><br>
                     </div>
                 </div>
             </div>
