contact page responsive

--- a/mardi gras project/contact.html
+++ b/mardi gras project/contact.html
@@ -42,7 +42,7 @@
                     Us</button>
             </div>
         </nav> <br>
-        <div class="form1">
+        <div class="form1 w-65">
             <h1>Contact Us</h1>
             <form action="" class="needs-validation" novalidate>
                 <label for="validationCustom01" class="name2">Name:</label>
